--- a/websprite/lou/caps.html
+++ b/websprite/lou/caps.html
@@ -13,7 +13,7 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Time</a><a href="magdalene.html"> ★Magdalene</a><a class="selected" href=caps.html> ★Caps </a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★archive</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a> <a href="time.html">★Type</a><a href="magdalene.html"> ★Magdalene</a><br><a href="riot.html"> ★Show Posters</a><a class="selected" href=caps.html> ★Caps </a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★archive</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
