--- a/websprite/lou/girlonline.html
+++ b/websprite/lou/girlonline.html
@@ -13,31 +13,27 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a class="selected" href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Type</a> <a href="Magdalene.html"> ★Magdalene </a> <a href="caps.html"> ★Caps </a>  <a href="Structures.html"> ★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★etcetera</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
+            <h2>Projects: <a class="selected" href=girlonline.html>★Girl Onlin3</a> <a href="time.html">★Type</a> <a href="Magdalene.html"> ★Magdalene </a><br><a href="riot.html"> ★Show Posters</a> <a href="caps.html"> ★Caps </a>  <a href="Structures.html"> ★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★archive</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a class="selected" href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> ★etcetera</a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
+        <h4>Projects: <br> <a class="selected" href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> ★archive</a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
 </div>
     <div class="images">
         <div class="img2">
             <img class="image2" src="./images/igirlslide1.jpg">
         </div>
-        <div class="proj1"><h5>Girl Online3 is a publication <br> exploring girlhood on the internet <br> </h5></div>
+        <div class="proji"><h5>Girl Online3 is a publication <br> exploring girlhood on the internet <br> </h5></div>
         <div class="img1">
-            <img  src="./images/louprint1.jpg" width="800px">
+            <img  src="./images/GirlOnlin3Coquette.png" width="800px">
         </div>
-        <div class="img2">
-            <img class="image2" src="./images/spread33.jpg" width="700px">
-        </div>
+        <div class="proj2i"><h5>Volume One examines girlhood on the internet and the impact of image <br> collecting and associating in personal style and identity. </h5></div>
         <div class="img1">
+            <img src="./images/spread33.jpg" width="800px">
             <img src="./images/louweb3.jpg" width="800px">
         </div>
-        <div class="proj2"><h5>Volume One of publication examining girlhood on the internet and the impact of image collecting and associating in personal style and identity. </h5></div>
-        <div class="img2">
-            <img src="./images/spread11.jpg" width="700px">
-        </div>
+        <img src="./images/spread11.jpg" width="700px">
     </div>
     <div class="phonecont">
         <h5>Girl Onlin3<br>ongoing</h5>
