--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -18,7 +18,7 @@
             <h1><a class="selected" href="lou.html">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Type</a><a href="Magdalene.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★archive</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a> <a href="time.html">★Type</a><a href="Magdalene.html"> ★Magdalene</a><br><a href="riot.html"> ★Show Posters</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★archive</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
@@ -30,7 +30,7 @@
         <img src="./images/workreel.gif" style="width: 600px;">
     </div>
     <div class="about me">
-        <h5>Hi hello world welcome to my little corner of the internet<br>I am a graphic designer based in brooklyn. Things I love:<br>print, editorial, fashion, people and the internet!<br>thank you for visiting my site and checking out my work.<br> I am always open to collaborate and meet creative people. <br>Come back soon!</h5>
+        <h5><br>Lourdes is a graphic designer based in brooklyn. <br>Loves print, editorial, fashion and the internet.
     </div>
 </div>
     <div class="phonecont">
