--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -13,7 +13,7 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Type</a><a href="Magdalene.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> ★archive</a> <a href="https://www.instagram.com/renougt/">  ★Renou</a></h2>
+            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a> <a href="time.html">★Type</a><a href="Magdalene.html"> ★Magdalene</a><br><a href="riot.html"> ★Show Posters</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> ★archive</a> <a href="https://www.instagram.com/renougt/">  ★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
