--- a/websprite/lou/ux.html
+++ b/websprite/lou/ux.html
@@ -13,7 +13,7 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Time</a><a href="Magdalene.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html" class="selected"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html"> ★archive</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
+            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a> <a href="time.html">★Type</a><a href="Magdalene.html"> ★Magdalene</a><br><a href="riot.html"> ★Show Posters</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html" class="selected"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html"> ★archive</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
@@ -23,7 +23,7 @@
     <div class="phonecont"><h5>Digitl Product Design Case Study<BR>2021</h5></div>
     <div class="images3">
         <img class="image3" src="./images/inone1.jpg">
-        <div class="projux1"><h5>Digital Product Design Case Study<br>2021</h5></div>
+        <div class="projux1"><h5>Digital Product Design <br>Case Study<br>2021</h5></div>
         <img class="image3" src="./images/inone2.jpg">
         <img class="image3" src="./images/inone3.jpg">
         <img class="image3" src="./images/inone6.jpg">
