--- a/websprite/lou/Structures.html
+++ b/websprite/lou/Structures.html
@@ -18,20 +18,21 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★archive</a><br><a href=Structures.html class="selected">★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a</h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href=Structures.html class="selected">★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> ★archive</a><br><a href="https://www.instagram.com/renougt/">★Renou</a</h4>
     </div>
     <div class="images">
-        <img class="img2" src="./images/niki.gif">
+        <img class="img2" src="./images/niki.gif" width="50%" height="auto">
         <div class="proj1"><h5>Gallery Posters 2020</h5></div>
-        <img class="img1" src="./images/NikiDeSaintPhalle1.png">
-        <div class="proj2"><h5>Hypothetical Gallery Posters made for <br> The Niki De saint Phalle Structures<br> For Life show at MomaPs1</h5> </div>
-        <img class="img2" src="./images/NikiDeSaintPhalle2.png">
+        <img class="img1" src="./images/NikiDeSaintPhalle1.png" width="50%">
+        <div class="proj2"><h5>Proposed Gallery Posters made for <br> The Niki De saint Phalle Structures<br> For Life show at MomaPs1</h5> </div>
+        <img class="img1" src="./images/NikiDeSaintPhalle2.png" width="50%" height="auto">
     </div>
     <div class="phonecont">
         <h5>Gallery Posters<br>2020</h5>
-        <img src="./images/NikiDeSaintPhalle1.png">  
-        <img src="./images/NikiDeSaintPhalle2.png">
+        <img src="./images/NikiDeSaintPhalle1.png" width="100%">  
+        <img src="./images/NikiDeSaintPhalle2.png" width="100%">
         <img src="./images/niki.gif">
+        <h6>Proposed posters designs  inspired by the Niki De Saint Phalle show at Moma Ps1 in Brooklyn New York.</h6>
     </div>
     <footer class="footerc">
         <div class="container">
