--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -41,10 +41,10 @@
         </div>
     </div>
     <div class="phonecont">
-        <img src="./images/vrhoe4.jpg">
-        <img src="./images/lush.gif">
-        <img src="./images/Good_life.gif">
-        <img src="./images/modernists.png">
+        <img src="./images/vrhoe4.jpg" width="100%">
+        <img src="./images/lush.gif" width="100%">
+        <img src="./images/Good_life.gif" width="100%">
+        <img src="./images/modernists.png" width="100%">
     </div>
     <footer class="footerc">
         <div class="container">
