--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -18,7 +18,7 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a class="selected" href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a class="selected" href="loom.html"> ★loom </a><br><a href="etc.html"> ★archive</a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
     <div class="images2">
         <img class="image3" src="./images/loom1.png">
@@ -32,19 +32,19 @@
     </div>
     <div class="phonecont">
         <h5>Digital Product Design Case Study<br>2020</h5>
-        <img src="./images/loom1.png">
-        <img src="./images/loom2.png">
-        <img src="./images/loom3.png">
-        <img src="./images/loom4.png">
-        <img src="./images/loom5.png">
-        <img src="./images/loom6.png">
-        <img src="./images/loom7.png">
-        <img src="./images/loom8.png">
-        <img src="./images/loom9.png">
-        <img src="./images/loom10.png">
-        <img src="./images/loom11.png">
-        <img src="./images/loom12.png">
-        <img src="./images/loom13.png">
+        <img src="./images/loom1.png" width="100%">
+        <img src="./images/loom2.png" width="100%">
+        <img src="./images/loom3.png" width="100%">
+        <img src="./images/loom4.png" width="100%">
+        <img src="./images/loom5.png" width="100%">
+        <img src="./images/loom6.png" width="100%">
+        <img src="./images/loom7.png" width="100%">
+        <img src="./images/loom8.png" width="100%">
+        <img src="./images/loom9.png" width="100%">
+        <img src="./images/loom10.png" width="100%">
+        <img src="./images/loom11.png" width="100%">
+        <img src="./images/loom12.png" width="100%">
+        <img src="./images/loom13.png" width="100%">
     </div>
     <footer class="footer">
         <div class="container">
