--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -23,7 +23,7 @@
     </div>
     <div class="phone">
             <h3><a class="selected" href="lou.html">Lourdes<br>Salazar</a></h3>
-            <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★archive</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
+            <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> ★archive</a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
 <div class="contents">
     <div class="img1">
@@ -35,6 +35,7 @@
 </div>
     <div class="phonecont">
         <img src="./images/workreel.gif" style="width: 100%;">
+        <h5>Lourdes is a graphic designer based in brooklyn. Loves print, editorial, fashion and the internet.</h5>
     </div>
 </body>
 <footer class="footer">
