--- a/websprite/lou/riot.html
+++ b/websprite/lou/riot.html
@@ -38,10 +38,10 @@
     </div>
     <div class="phonecont">
         <h5>Manifesto Posters<br>2020</h5>
-        <img src="./images/manifesto1.jpg">
+        <img src="./images/manifesto1.jpg" width="100%">
         <h6>Using Courier new inspired by the original Riot Grrl DIY ethos. </h6>
-        <img src="./images/MANIFESTO_DRAFTS-03.jpg">
-        <img src="./images/manifesto2.png">
+        <img src="./images/MANIFESTO_DRAFTS-03.jpg" width="100%">
+        <img src="./images/manifesto2.png" width="100%">
         <img src="./images/Manifesto scan 1.jpg">
     </div>
     <footer class="footerc">
