--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -38,9 +38,9 @@
     </div>
     <div class="phonecont">
         <h5>Type Responses<br>2020</h5>
-        <img src="./images/type_r_1.jpg">
+        <img src="./images/type_r_1.jpg" width="100%">
         <h6>Typographical responses to various selected texts about graphic design</h6>
-        <img src="./images/type_r_2.jpg">
+        <img src="./images/type_r_2.jpg" width="100%">
     </div>
     <footer class="footerc">
         <div class="container">
