--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -37,7 +37,7 @@
             <img class="image2" src="./images/trip.gif">
         </div>
         <div class="img2">
-            <img class="image2" src="./images/sale.gif">
+            <img class="image2" src="./images/chaos.jpg">
         </div>
     </div>
     <div class="phonecont">
