added PDF downloadable

--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -32,7 +32,9 @@
     <div class="about me">
         <h5><br>Lourdes is a graphic designer based in brooklyn. <br>Loves print, editorial, fashion and the internet.
     </div>
+    <br><br><br><br><br><br><h5><a class="clickable" href="./images/Lourdes Design Portfolio 23.pdf">Portfolio PDF</a></h5>
 </div>
+
     <div class="phonecont">
         <img src="./images/workreel.gif" style="width: 100%;">
         <h5>Lourdes is a graphic designer based in brooklyn. Loves print, editorial, fashion and the internet.</h5>
