--- a/websprite/lou/Magdalene.html
+++ b/websprite/lou/Magdalene.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="louphoria.css">
     <title>Magdalene</title>
+    <link rel="icon" type="image/x-icon" href="./images/faviconlou.png">
 </head>
 <body>
     <div class="title">
