--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Lou</title>
+    <link rel="icon" type="image/x-icon" href="./images/faviconlou.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
     </style>
