--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -37,8 +37,8 @@
 </div>
 
     <div class="phonecont">
+        <h5>Lourdes is a graphic designer based in Brooklyn, New York. Loves print, editorial, music, fashion and the internet.</h5>
         <img src="./images/workreel.gif" style="width: 100%;">
-        <h5>Lourdes is a graphic designer based in brooklyn. Loves print, editorial, fashion and the internet.</h5>
     </div>
 </body>
 <footer class="footer">
