--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -31,7 +31,7 @@
         <img src="./images/workreel.gif" style="width: 600px;">
     </div>
     <div class="about me">
-        <h5><br>Lourdes is a graphic designer based in brooklyn. <br>Loves print, editorial, fashion and the internet.
+        <h5><br>Lourdes is a graphic designer based in brooklyn. <br>Loves print, editorial, music, fashion and the internet.
     </div>
     <br><br><br><br><br><br><h5><a class="clickable" href="./images/Lourdes Design Portfolio 23.pdf">Portfolio PDF</a></h5>
 </div>
@@ -45,6 +45,7 @@
     <div class="container">
         <img src="./images/hearthands.jpg" width="40px">
         <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+        <h5><a class="green" href = https://open.spotify.com/user/12133967700?si=573f22a30ecc4518>Spotify</a></h5>
         <a href="./images/resume_latest.pdf"><h5>CV</h5></a>
     </div>
 </footer>
