--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -47,6 +47,7 @@
         <div class="container">
             <img src="./images/hearthands.jpg" width="40px">
             <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <h5><a class="green" href = https://open.spotify.com/user/12133967700?si=573f22a30ecc4518>Spotify</a></h5>
             <a href="./images/resume_latest.pdf"><h5>CV</h5></a>
         </div>
     </footer>
