--- a/websprite/lou/Structures.html
+++ b/websprite/lou/Structures.html
@@ -35,12 +35,11 @@
         <img src="./images/niki.gif">
         <h6>Proposed posters designs  inspired by the Niki De Saint Phalle show at Moma Ps1 in Brooklyn New York.</h6>
     </div>
-    <footer class="footerc">
+    <footer class="footer">
         <div class="container">
             <img src="./images/hearthands.jpg" width="40px">
-            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
-            <h5><a class="green" href = https://open.spotify.com/user/12133967700?si=573f22a30ecc4518>Spotify</a></h5>
-            <a href="./images/resume_latest.pdf"><h5>CV</h5></a>
+            <h5><a href = "https://www.instagram.com/louuuphoria/">Instagram</a></h5>
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5><a href="./images/resume_latest.pdf"><h5>CV</h5></a>
         </div>
     </footer>
 </body>
