--- a/websprite/lou/caps.html
+++ b/websprite/lou/caps.html
@@ -39,12 +39,11 @@
         <h6>A typographical landscape exploration of Guatemala city's loud all caps signage.<br>
         </h6>
     </div>
-    <footer class="footerc">
+    <footer class="footer">
         <div class="container">
             <img src="./images/hearthands.jpg" width="40px">
-            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
-            <h5><a class="green" href = https://open.spotify.com/user/12133967700?si=573f22a30ecc4518>Spotify</a></h5>
-            <a href="./images/resume_latest.pdf"><h5>CV</h5></a>
+            <h5><a href = "https://www.instagram.com/louuuphoria/">Instagram</a></h5>
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5><a href="./images/resume_latest.pdf"><h5>CV</h5></a>
         </div>
     </footer>
 </body>
