--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -51,7 +51,8 @@
         <div class="container">
             <img src="./images/hearthands.jpg" width="40px">
             <h5><a href = "https://www.instagram.com/louuuphoria/">Instagram</a></h5>
-            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5><a href="./images/resume_latest.pdf"><h5>CV</h5></a>
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <a href="./images/LouCV.pdf"><h5>CV</h5></a>
         </div>
     </footer>
 </body>
