--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -28,7 +28,7 @@
     </div>
 <div class="contents">
     <div class="img1">
-        <img src="./images/workreel.gif" style="width: 600px;">
+        <img src="./images/work.gif" style="width: 600px;">
     </div>
     <div class="about me">
         <h5><br>Lourdes is a graphic designer based in brooklyn. <br>Loves print, editorial, music, fashion and the internet.
